--- a/layouts/website-signup/website-signup.html
+++ b/layouts/website-signup/website-signup.html
@@ -1,4 +1,87 @@
-{{ define "main" }}
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    {{ if .Params.noindex }}
+    <meta name="robots" content="noindex, nofollow" />
+    {{ else }}
+    <meta name="robots" content="index, follow" />
+    {{ end }}
+
+    <link rel="stylesheet" href="{{.Site.BaseURL}}css/styles.css">
+    <link rel="alternate" href="{{ .Permalink }}" hreflang="en-us" />
+    <link rel="alternate" href="{{ .Permalink }}" hreflang="x-default" />
+    {{ partial "global/seo2" . }}
+    {{ if .IsHome }}
+    {{ partial "global/schema" . }}
+    {{ end }}
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700&display=swap" rel="stylesheet">
+    <!-- UIkit CSS -->
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/uikit@3.6.8/dist/css/uikit.min.css" />
+    <!-- UIkit JS -->
+    <script src="https://cdn.jsdelivr.net/npm/uikit@3.6.8/dist/js/uikit.min.js" defer></script>
+    <script src="https://cdn.jsdelivr.net/npm/uikit@3.6.8/dist/js/uikit-icons.min.js" defer></script>
+<!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-4X5X3V34Y3"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-4X5X3V34Y3');
+</script>
+
+<meta name="p:domain_verify" content="b15e511810919a03ae9922c7a08289b4"/>
+<meta name="google-site-verification" content="wAmNl-djcf7naDnLrCdiVHUTwj-WKZsKANYRmhFJXXA" />
+    
+    <!-- Facebook Pixel Code -->
+<script>
+!function(f,b,e,v,n,t,s)
+{if(f.fbq)return;n=f.fbq=function(){n.callMethod?
+n.callMethod.apply(n,arguments):n.queue.push(arguments)};
+if(!f._fbq)f._fbq=n;n.push=n;n.loaded=!0;n.version='2.0';
+n.queue=[];t=b.createElement(e);t.async=!0;
+t.src=v;s=b.getElementsByTagName(e)[0];
+s.parentNode.insertBefore(t,s)}(window, document,'script',
+'https://connect.facebook.net/en_US/fbevents.js');
+fbq('init', '372514063562316');
+fbq('track', 'PageView');
+</script>
+<noscript><img height="1" width="1" style="display:none"
+src="https://www.facebook.com/tr?id=372514063562316&ev=PageView&noscript=1"
+/></noscript>
+<!-- End Facebook Pixel Code -->
+    
+    
+<!-- Hotjar Tracking Code for https://www.hungryram.com -->
+<script>
+  (function(h,o,t,j,a,r){
+      h.hj=h.hj||function(){(h.hj.q=h.hj.q||[]).push(arguments)};
+      h._hjSettings={hjid:2705292,hjsv:6};
+      a=o.getElementsByTagName('head')[0];
+      r=o.createElement('script');r.async=1;
+      r.src=t+h._hjSettings.hjid+j+h._hjSettings.hjsv;
+      a.appendChild(r);
+  })(window,document,'https://static.hotjar.com/c/hotjar-','.js?sv=');
+</script>
+</head>
+<body id="body">
+    <script>
+        fbq('track', 'Lead');
+      </script>
+      <div class="uk-background-cover uk-panel uk-flex uk-flex-center uk-flex-middle page-banner" style="background: linear-gradient(rgba(0,0,0,0.5),rgba(0,0,0,0.5)),url(https://res.cloudinary.com/hungryram19/image/upload/v1628200056/hungryram/desktop2_igppbt.jpg)no-repeat center;background-size:cover" uk-height-viewport="offset-bottom: {{ if in .Permalink "blog" }}75{{ else }}55{{ end }}">
+        <div class="uk-position-top full-nav-wrapper">
+            {{ partial "global/navbar" . }}
+        </div>
+        {{ if not (in .Permalink "blog") }}
+        <div class="uk-margin-large-top uk-text-left uk-padding">
+        <h1 class="uk-text-uppercase uk-white uk-text-center uk-h2 uk-margin-medium-top" style="color: #fff;">{{ .Title }}</h1>
+        </div>
+        {{ end }}
+    </div>
     <div class="uk-section">
         <div class="uk-container">
             <h2>Thank you for starting your free trial!</h2>
@@ -8,4 +91,4 @@
 
         </div>
     </div>
-{{ end }}
+{{ partial "global/footer" . }}
