--- a/layouts/website-signup/website-signup.html
+++ b/layouts/website-signup/website-signup.html
@@ -70,7 +70,7 @@ src="https://www.facebook.com/tr?id=372514063562316&ev=PageView&noscript=1"
 </head>
 <body id="body">
     <script>
-        fbq('track', 'Lead');
+        fbq('track', 'StartTrial');
       </script>
       <div class="uk-background-cover uk-panel uk-flex uk-flex-center uk-flex-middle page-banner" style="background: linear-gradient(rgba(0,0,0,0.5),rgba(0,0,0,0.5)),url(https://res.cloudinary.com/hungryram19/image/upload/v1628200056/hungryram/desktop2_igppbt.jpg)no-repeat center;background-size:cover" uk-height-viewport="offset-bottom: {{ if in .Permalink "blog" }}75{{ else }}55{{ end }}">
         <div class="uk-position-top full-nav-wrapper">
