--- a/layouts/website-special/website-special.html
+++ b/layouts/website-special/website-special.html
@@ -40,7 +40,7 @@
                             <div class="uk-text-center">
                                 <h3 class="uk-margin-remove">Start for free today</h3>
                                 <h5 class="uk-margin-small-top"><span class="accent">FREE</span> site setup</h5>
-                                <p>Start your 7-day free trial. No credit card required.</p>
+                                <p>Start your 7-day free trial. No credit card required. $79/mo for single agents. $99/mo for brokers/team after trial.</p>
                             </div>
                             <hr>
                             <form name="Website Special Agent" method="POST" class="uk-margin-medium-top" netlify-honeypot="bot-field" data-netlify="true" action="/website-signup">
