--- a/layouts/website-special/website-special.html
+++ b/layouts/website-special/website-special.html
@@ -7,7 +7,7 @@
     </div>
     <div class="hero-text uk-white uk-width-1-1@s uk-text-left uk-margin-large-top uk-position-center uk-text-center@s" style="z-index:1">
         <div class="uk-padding">
-            <h1 class="uk-text-bold heading uk-margin-remove uk-white">Powerful Real estate IDX website</h1>
+            <h1 class="uk-text-bold heading uk-margin-remove uk-white">Save $500 on a real estate website setup</h1>
             <p>Give your business an edge over your competitors with a new type of website.<br>Built entirely different from your average real estate websites.</p>
             
             <div class="uk-margin-medium-top">
@@ -24,10 +24,10 @@
     <div class="uk-container">
         <div class="uk-grid uk-grid-large">
             <div class="uk-width-1-2@s uk-margin-medium-bottom">
-                <h3><span class="accent">LIMITED TIME:</span> We're offering a risk free investment for your real estate business!</h3>
+                <h3><span class="accent">LIMITED TIME:</span> We're offering a FREE website setup and waiving your CRMLS data fee!</h3>
                 <p style="font-weight:600">Why? We want you to experience the next level in real estate websites.</p>
                 <p>With a free trial, you'll learn how everything works and get the guidance you need. Start your free trial today and get a website personalized for you.</p>
-                <p style="font-weight:600">Need proof? Sign up for free and we'll send you a report!</p>
+                <p></p>
 
                 <ul class="uk-list">
                     <li><span uk-icon="check" class="uk-icon-button uk-margin-small-right"></span>No contract cancel anytime</li>
