--- a/layouts/website-special2/website-special2.html
+++ b/layouts/website-special2/website-special2.html
@@ -1,21 +1,13 @@
 {{ partial "global/head" . }}
-<div class="uk-position-relative">
-    <div class="uk-position-top">
-        <nav class="uk-navbar-container uk-navbar-transparent" uk-navbar>
-            <div class="uk-navbar-left">
-                <a class="uk-navbar-item uk-logo" href="/">
-                    <img src="https://res.cloudinary.com/hungryram19/image/upload/v1631939763/hungryram/large-hungry-ram-whitelogo_lo33ll.png" alt="Hungry Ram" width="200">
-                </a>
-            </div>
-        </nav>
-    </div>
-</div>
-<div class="uk-section uk-section-large" style="background: url(https://res.cloudinary.com/hungryram19/image/upload/v1637982803/hungryram/website-special/background-special-2.jpg) no-repeat center" id="signup-2">
-    <div class="uk-container uk-light uk-text-center uk-margin-large-top">
+<div class="uk-section uk-section-large" style="background: url(https://res.cloudinary.com/hungryram19/image/upload/v1637982803/hungryram/website-special/background-special-2.jpg) no-repeat center;background-size:cover" id="signup-2">
+    <div class="uk-container uk-light uk-text-center uk-margin-medium-bottom">
+        <a class="uk-navbar-item uk-logo" href="/">
+            <img src="https://res.cloudinary.com/hungryram19/image/upload/v1631939763/hungryram/large-hungry-ram-whitelogo_lo33ll.png" alt="Hungry Ram" width="200">
+        </a>
         <h1>Get Your Free Real Estate Website</h1>
         <p>Sign up today and claim your FREE website setup. We're covering your MLS fee and setup fee!<br> The ULTIMATE real estate website deal</p>
     </div>
-    <div class="uk-container uk-container-small uk-margin-medium-top">
+    <div class="uk-container uk-container-small">
         <div class="uk-card uk-card-default uk-padding">
             <form name="Website Special 2" method="POST" class="uk-margin-medium-top" netlify-honeypot="bot-field" data-netlify="true" action="/website-signup">
                 <input name="bot-field" type="hidden" />
@@ -41,9 +33,9 @@
                 <div class="uk-width-1-1">
                     <button class="uk-button uk-button-secondary modal-button">Submit</button>
                 </div>
-                <div class="uk-width-1-1">
-                    <small>By submitting the form with your information above you are agreeing to our <a style="color:#2196f3" href="/legal/terms-and-conditions">Terms and Conditions</a> and <a style="color:#2196f3" href="/legal/privacy-policy">Privacy Policy</a></small>
-                    <p class="uk-text-small uk-text-center">Start your 7-day free trial. No credit card required. We are offering a free real estate website. After the 7-day trial, it is $49/mo for single agents and $69 for teams/brokers.</p>
+                <div class="uk-width-1-1 uk-text-center">
+                    <p class="uk-text-small uk-margin-small-top">By submitting the form with your information above you are agreeing to our <a style="color:#2196f3" href="/legal/terms-and-conditions">Terms and Conditions</a> and <a style="color:#2196f3" href="/legal/privacy-policy">Privacy Policy</a></p>
+                    <p class="uk-text-small uk-text-center">Start your 7-day free trial. No credit card required. We are offering a free real estate website. After the 7-day trial, it is $49/mo for single agents and $69 for teams/brokers. IDX is an additional $30/mo</p>
 
                 </div>
             </form>
