--- a/layouts/website-special2/website-special2.html
+++ b/layouts/website-special2/website-special2.html
@@ -35,8 +35,7 @@
                 </div>
                 <div class="uk-width-1-1 uk-text-center">
                     <p class="uk-text-small uk-margin-small-top">By submitting the form with your information above you are agreeing to our <a style="color:#2196f3" href="/legal/terms-and-conditions">Terms and Conditions</a> and <a style="color:#2196f3" href="/legal/privacy-policy">Privacy Policy</a></p>
-                    <p class="uk-text-small uk-text-center">Start your 7-day free trial. No credit card required. We are offering a free real estate website. After the 7-day trial, it is $49/mo for single agents and $69 for teams/brokers. IDX is an additional $30/mo</p>
-
+                    <p class="uk-text-small uk-text-center">Start your 7-day free trial. No credit card required. We are offering a free real estate website. After the 7-day trial, it is $49/mo for single agents and $69 for teams/brokers. IDX is an additional $30/mo. Data fee is charged through your MLS. We cover up to $10/mo for your data fee.</p>
                 </div>
             </form>
         </div>
