--- a/layouts/website-special2/website-special2.html
+++ b/layouts/website-special2/website-special2.html
@@ -5,7 +5,7 @@
             <img src="https://res.cloudinary.com/hungryram19/image/upload/v1631939763/hungryram/large-hungry-ram-whitelogo_lo33ll.png" alt="Hungry Ram" width="200">
         </a>
         <h1>Get Your Free Real Estate Website</h1>
-        <p>Sign up today and claim your FREE website setup. We're covering your MLS fee and setup fee!<br> The ULTIMATE real estate website deal</p>
+        <p>Sign up today and claim your FREE website setup. We're covering up to $10 of your monthly MLS data fee and giving you a free website setup!<br> The ULTIMATE real estate website deal</p>
     </div>
     <div class="uk-container uk-container-small">
         <div class="uk-card uk-card-default uk-padding">
