update website special

--- a/layouts/website-special/website-special.html
+++ b/layouts/website-special/website-special.html
@@ -7,14 +7,11 @@
     </div>
     <div class="hero-text uk-white uk-width-1-1@s uk-text-left uk-margin-large-top uk-position-center uk-text-center@s" style="z-index:1">
         <div class="uk-padding">
-            <h1 class="uk-text-bold heading uk-margin-remove uk-white">Save $500 on a real estate website setup</h1>
-            <p>Give your business an edge over your competitors with a new type of website.<br>Built entirely different from your average real estate websites.</p>
+            <h1 class="uk-text-bold heading uk-margin-remove uk-white">Start your 2022 with a FREE real estate website</h1>
+                <p>Give your business an edge over your competitors with the fastest website on the market<br> Built entirely different from your average real estate websites.</p>
             
             <div class="uk-margin-medium-top">
-                <a href="#website-signup" class="uk-button-primary uk-button" uk-scroll>Start Free trial</a>
-                <div>
-                    <small>Start your 7-day free trial. No credit card required.</small>
-                </div>
+                <a href="#website-signup" class="uk-button-primary uk-button" uk-scroll>Learn more</a>
             </div>
         </div>
     </div>
@@ -24,10 +21,9 @@
     <div class="uk-container">
         <div class="uk-grid uk-grid-large">
             <div class="uk-width-1-2@s uk-margin-medium-bottom">
-                <h3><span class="accent">LIMITED TIME:</span> We're offering a FREE website setup and waiving your CRMLS data fee!</h3>
-                <p style="font-weight:600">Why? We want you to experience the next level in real estate websites.</p>
-                <p>With a free trial, you'll learn how everything works and get the guidance you need. Start your free trial today and get a website personalized for you.</p>
-                <p></p>
+                <h3>Increase your leads with a high performing website</h3>
+                <p>The most effective way to get a high ranking on search engines is by providing visitors with fast and secure website. Our websites are SEO friendly and score the highest in the Google PageSpeed score!</p>
+                <p style="font-weight:600">Start maximizing your leads with our modern real estate websites</p>
 
                 <ul class="uk-list">
                     <li><span uk-icon="check" class="uk-icon-button uk-margin-small-right"></span>No contract cancel anytime</li>
@@ -38,9 +34,9 @@
             <div class="uk-width-1-2@s" id="website-signup">
                         <div class="uk-card uk-card-default" style="padding: 30px;">
                             <div class="uk-text-center">
-                                <h3 class="uk-margin-remove">Start for free today</h3>
-                                <h5 class="uk-margin-small-top"><span class="accent">FREE</span> site setup</h5>
-                                <p>Start your 7-day free trial. No credit card required. $79/mo for single agents. $99/mo for brokers/team after trial.</p>
+                                <h3 class="uk-margin-remove">Step up your real estate website</h3>
+                                <h5 class="uk-margin-small-top">Get a site that converts</h5>
+                                <p>Are you interested in learning more about our websites? Fill out the form below.</p>
                             </div>
                             <hr>
                             <form name="Website Special Agent" method="POST" class="uk-margin-medium-top" netlify-honeypot="bot-field" data-netlify="true" action="/website-signup">
@@ -65,7 +61,7 @@
                                     <textarea class="uk-textarea" rows="5" placeholder="Additional Information and comments" name="comments"></textarea>
                                 </div>
                                 <div class="uk-width-1-1">
-                                    <button class="uk-button uk-button-secondary modal-button">Build my website</button>
+                                    <button class="uk-button uk-button-secondary modal-button uk-text-default">Send</button>
                                 </div>
                                 <div class="uk-width-1-1">
                                     <small>By submitting the form with your information above you are agreeing to our <a style="color:#2196f3" href="/legal/terms-and-conditions">Terms and Conditions</a> and <a style="color:#2196f3" href="/legal/privacy-policy">Privacy Policy</a></small>
