update website special

--- a/layouts/website-special/website-special.html
+++ b/layouts/website-special/website-special.html
@@ -5,10 +5,10 @@
     <div class="uk-position-top full-nav-wrapper" style="z-index: 2;">
         {{ partial "global/navbar" . }}
     </div>
-    <div class="hero-text uk-white uk-width-1-1@s uk-text-left uk-margin-large-top uk-position-center uk-text-center@s" style="z-index:1">
+    <div class="hero-text uk-white uk-width-1-1@s uk-margin-large-top uk-position-center uk-text-center" style="z-index:1">
         <div class="uk-padding-small">
             <h1 class="uk-text-bold heading uk-margin-remove uk-white">Start your 2022 with a FREE real estate website</h1>
-                <p>Give your business an edge over your competitors with the fastest website on the market<br> Built entirely different from your average real estate websites.</p>
+                <p>Give your business an edge over your competitors with the fastest website on the market</p>
             
             <div class="uk-margin-medium-top">
                 <a href="#website-signup" class="uk-button-primary uk-button" uk-scroll>Learn more</a>
