--- a/layouts/partials/global/footer.html
+++ b/layouts/partials/global/footer.html
@@ -68,6 +68,6 @@
         </div>
     </div>
 </footer>
-
+<script async type="text/javascript" src="https://static.klaviyo.com/onsite/js/klaviyo.js?company_id=RDk2jk"></script>
 </body>
 </html>
