--- a/layouts/welcome/welcome.html
+++ b/layouts/welcome/welcome.html
@@ -23,12 +23,25 @@
         </div>
         <div class="uk-container uk-container-small uk-margin-medium">
             <div class="uk-flex-center uk-flex uk-text-center">
+                <div class="uk-width-large">
+                    <div class="uk-child-width-1-1 uk-grid-small uk-text-center" uk-grid>
+                        <div>
+                            <a href="/portfolio" class="uk-button uk-button-primary uk-width-1-1">View Portfolio</a>
+                        </div>
+                        <div>
+                        <a href="/" class="uk-button uk-button-primary uk-width-1-1">Visit Home Page</a>
 
-                <div class="uk-width-large uk-child-width-1-1 uk-grid-small" uk-grid>
-                    <a href="/portfolio" class="uk-button uk-button-primary">View Portfolio</a>
-                    <a href="/portfolio" class="uk-button uk-button-primary">Visit Home Page</a>
-                    <a href="/portfolio" class="uk-button uk-button-primary">Real Estate Websites</a>
-                    <a href="/portfolio" class="uk-button uk-button-primary">Small Business Websites</a>
+                        </div>
+                        <div>
+                        <a href="/services/agent-idx-websites/" class="uk-button uk-button-primary uk-width-1-1">Real Estate Websites</a>
+                        </div>
+                        <div>
+                        <a href="/services/small-business-website-design/" class="uk-button uk-button-primary uk-width-1-1">Small Business Websites</a>
+                        </div>
+                        <div>
+                        <a href="/contact" class="uk-button uk-button-primary uk-width-1-1">Contact</a>
+                        </div>
+                    </div>
                 </div>
             </div>
         </div>
